[package]
name = "distributed_kv_store"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "kv_store",
    "."
]

[dependencies]
kv_store = { path = "kv_store"}
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"